# asistente-sbs-unprg

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
data/: fcc_rules_seed.csv  provision_rules_seed.csv
db/migrations/: 001_initial_schema.sql  002_create_fcc_rules.sql
docs/: deployment_cloud_run.md  table_inventory.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: styles.css
frontend/src/app/: App.tsx  Dashboard.tsx
frontend/src/services/: apiClient.ts  firebase.ts
frontend/src/shared/: apiTypes.ts  markdown.tsx
sbs_assistant/: __init__.py
sbs_assistant/api/: __init__.py  main.py
sbs_assistant/api/auth/: __init__.py  firebase.py
sbs_assistant/application/: __init__.py
sbs_assistant/config/: settings.py
sbs_assistant/domain/: __init__.py
sbs_assistant/infrastructure/: __init__.py
scripts/: check_ingestion_counts.py  embed_chunks.py  ingest_sbs_pdf.py  search_chunks.py  seed_fcc_rules.py  seed_provision_rules.py  setup_postgres.py  setup_postgres_migrations.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: test_calculate_provision.py  test_example_api.py  test_explain_api.py  test_explain_concept.py  test_firebase_auth.py  test_generate_example.py  test_health.py  test_ingest_document.py  test_llm_example_variation.py  test_postgres_hybrid_retriever.py  test_postgres_synthetic_case_repo.py  test_provision_rules_seed.py  test_retrieval_planner.py  test_sbs_text_chunker.py  test_settings.py
(+61 files in other folders)
