[project]
name = "sbs-assistant"
version = "0.1.0"
description = "Backend base para un asistente educativo multimodal sobre el Reglamento SBS."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "cloud-sql-python-connector>=1.20.2",
    "fastapi>=0.115.0",
    "firebase-admin>=6.6.0",
    "google-cloud-aiplatform>=1.153.1",
    "google-cloud-storage>=3.10.1",
    "httpx>=0.28.1",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "pypdf>=6.11.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "httpx>=0.27.0",
    "pip>=26.1.1",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "uv>=0.11.15",
]

[tool.uv]
package = false

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=sbs_assistant --cov-report=term-missing"
